# Controle_Financeiro_Pessoal

./: .gitignore  Dockerfile  README.md  package.json  render.yaml
backend/: .env.example  alembic.ini  build_backend.ps1  central_financeira_backend.spec  desktop_server.py  pyproject.toml  render-build.sh  requirements.txt
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_add_natureza_and_investments.py  0003_budget_items_history_and_snapshots.py  0004_financeiro_integrado_contas_dolar.py  0005_tipo_controle_investimentos.py  0006_multi_user_isolation_rls.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  paths.py  security.py  tenancy.py
backend/app/models/: __init__.py  base.py  caixinha.py  cartao.py  categoria.py  compromisso_cartao.py  configuracao.py  conta.py  conta_futura.py  cotacao.py  dividendo.py  meta.py  (+8 more)
desktop/: central_financeira_launcher.py
docs/supabase/: password-recovery-email-template.html
frontend/: .env.production  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
memory/: MEMORY.md  investimento-saldo-model.md
scripts/: build-backend.ps1  build-desktop.ps1  build-launcher.ps1  configure-supabase-env.ps1  dev.ps1  migrate_sqlite_to_supabase.py  package-windows.ps1
(+143 files in other folders)
