[package]
name = "central-financeira"
version = "1.0.0"
description = "Central Financeira Pessoal"
authors = ["Central Financeira"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
